@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-07T16:00:41Z",
-  "count_outdated" : 63,
-  "uniques_outdated" : 47,
+  "timestamp" : "2024-01-08T00:27:23Z",
+  "count_outdated" : 64,
+  "uniques_outdated" : 48,
   "count" : 70,
   "uniques" : 53,
   "clones" : [
-    {
-      "timestamp": "2023-12-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-30T00:00:00Z",
       "count": 2,
